View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025959 | Open CASCADE | OCCT:DRAW | public | 2015-03-19 11:45 | 2015-05-14 16:32 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | integration request | ||
Status | closed | Resolution | fixed | ||
Target Version | 6.9.0 | Fixed in Version | 6.9.0 | ||
Summary | 0025959: Draw Harness - do not turn on Z-clipping implicitly by mouse ring | ||||
Description | Seems it will be better if clipping planes will be switched on after giving special command | ||||
Steps To Reproduce | No need for test case | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR25959 has been created by isz. SHA-1: 92940dde8def30c7f2cd6e328b899ac518445e2e Detailed log of new commits: Author: isz Date: Thu Apr 16 11:21:36 2015 +0300 0025959: Clipping planes are switched on by mouse ring Clipping planes now can not be switched by mouse ring or both right and left mouse buttons. |
|
Branch CR25959 has been updated forcibly by isz. SHA-1: d9e00d6fc634d24474c67a9b69854e830e9f9260 |
|
Branch CR25959 has been updated forcibly by isz. SHA-1: b5e2ca6f517b8f46679743c9e88c2048e24ddb6d |
|
Branch CR25959 has been updated forcibly by isz. SHA-1: b1434494e7f279571cad154855f1d83e4c4b055d |
|
Dear Kirill, Please review branch CR25959. |
|
Please test the patch. |
|
Dear BugMaster, Branch CR25959 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: b1434494e7f279571cad154855f1d83e4c4b055d Number of compiler warnings: occt component : Linux: 18 (18 on master) Windows: 0 (0 on master) products component : Linux: 4 (4 on master) Windows: 0 (0 on master) Regressions/Differences: No regressions/differences Testing cases: Not needed Testing on Linux: occt component : Total MEMORY difference: 94365385 / 94252506 [+0.12%] Total CPU difference: 52681.47999999926 / 56192.519999999706 [-6.25%] products component : Total MEMORY difference: 23665556 / 23720718 [-0.23%] Total CPU difference: 18458.489999999965 / 19069.279999999962 [-3.20%] Testing on Windows: occt component : Total MEMORY difference: 57127109 / 57127628 [-0.00%] Total CPU difference: 15952.599859599195 / 15976.577213298899 [-0.15%] products component : Total MEMORY difference: 15476980 / 15478724 [-0.01%] Total CPU difference: 6196.125718499983 / 6217.388654799964 [-0.34%] There are no differences in images found by testdiff. |
|
Branch CR25959 has been deleted by inv. SHA-1: b1434494e7f279571cad154855f1d83e4c4b055d |
occt: master 58978f9b 2015-04-16 09:39:37
Committer: bugmaster Details Diff |
0025959: Draw Harness - do not turn on Z-clipping implicitly by mouse ring Clipping planes now can not be switched on by mouse ring or both right and left mouse buttons. To do this, user has to press certain button or call certain command. |
Affected Issues 0025959 |
|
mod - src/ViewerTest/ViewerTest_ViewerCommands.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-03-19 11:45 |
|
New Issue | |
2015-03-19 11:45 |
|
Assigned To | => kgv |
2015-03-30 09:36 | kgv | Severity | minor => integration request |
2015-03-30 09:36 | kgv | Category | OCCT:Visualization => OCCT:DRAW |
2015-04-10 09:31 | kgv | Assigned To | kgv => isz |
2015-04-10 09:31 | kgv | Status | new => assigned |
2015-04-10 09:36 |
|
Summary | Clipping palnes are switched on by combine of mouse ring and press on key "Ctrl" => Clipping planes are switched on by combine of mouse ring and press on key "Ctrl" |
2015-04-10 09:36 |
|
Description Updated | |
2015-04-16 11:19 |
|
Summary | Clipping planes are switched on by combine of mouse ring and press on key "Ctrl" => Clipping planes are switched on by mouse ring |
2015-04-16 11:21 | git | Note Added: 0039822 | |
2015-04-16 11:40 |
|
Summary | Clipping planes are switched on by mouse ring => Draw Harness - Clipping planes are switched on by mouse ring |
2015-04-16 12:17 | git | Note Added: 0039838 | |
2015-04-16 12:21 |
|
Summary | Draw Harness - Clipping planes are switched on by mouse ring => Draw Harness - do not turn on Z-clipping implicitly by mouse ring |
2015-04-16 12:37 | git | Note Added: 0039840 | |
2015-04-16 12:39 | git | Note Added: 0039841 | |
2015-04-16 12:41 |
|
Note Added: 0039843 | |
2015-04-16 12:41 |
|
Assigned To | isz => kgv |
2015-04-16 12:41 |
|
Status | assigned => resolved |
2015-04-16 12:41 |
|
Steps to Reproduce Updated | |
2015-04-16 12:46 | kgv | Note Added: 0039847 | |
2015-04-16 12:46 | kgv | Assigned To | kgv => bugmaster |
2015-04-16 12:46 | kgv | Status | resolved => reviewed |
2015-04-16 13:00 |
|
Assigned To | bugmaster => mkv |
2015-04-22 18:52 |
|
Note Added: 0040129 | |
2015-04-22 18:52 |
|
Assigned To | mkv => bugmaster |
2015-04-22 18:52 |
|
Status | reviewed => tested |
2015-04-22 18:53 |
|
Test case number | => Not needed |
2015-04-25 17:37 | bugmaster | Changeset attached | => occt master 58978f9b |
2015-04-25 17:37 | bugmaster | Status | tested => verified |
2015-04-25 17:37 | bugmaster | Resolution | open => fixed |
2015-05-14 15:28 |
|
Status | verified => closed |
2015-05-14 15:30 |
|
Fixed in Version | => 6.9.0 |
2015-05-14 16:32 | git | Note Added: 0041034 |