0025959: Draw Harness - do not turn on Z-clipping implicitly by mouse ring

Clipping planes now can not be switched on by mouse ring or both right and left mouse buttons. To do this, user has to press certain button or call certain command.